# Gogatsusai-osero

./: README.md
osero_6x6/: CMakeLists.txt  README.md  board.cpp  board.hpp  evaluator.cpp  evaluator.hpp  main.cpp  option_parser.cpp  option_parser.hpp  prompt.txt  review_prompt.txt
osero_6x6/config/: app_config.cpp  app_config.hpp
osero_6x6/hint/: gemini_client.cpp  gemini_client.hpp  hint_engine.hpp  hint_formatter.cpp  hint_formatter.hpp  hint_mode.hpp  hint_types.hpp  llm_client.hpp  llm_client_factory.cpp  llm_client_factory.hpp  llm_hint_engine.cpp  llm_hint_engine.hpp  local_hint_engine.cpp  local_hint_engine.hpp  minmax_hint_evaluator.cpp  minmax_hint_evaluator.hpp  openai_client.cpp  openai_client.hpp  prompt_builder.cpp  prompt_builder.hpp
osero_6x6/player/: human_player.cpp  human_player.hpp  minmax_player.cpp  minmax_player.hpp
osero_6x6/review/: game_record.hpp  game_reviewer.cpp  game_reviewer.hpp  review_formatter.cpp  review_formatter.hpp  review_mode.hpp  review_prompt_builder.cpp  review_prompt_builder.hpp
reversi_gui/: .gitignore  AI_INTEGRATION_GUIDE.md  CMakeLists.txt  README.md  ROADMAP.md  SETUP.md
reversi_gui/resources/: resources.qrc
reversi_gui/src/: aiengine.h  boardwidget.cpp  boardwidget.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  minmaxengine.cpp  minmaxengine.h  simplehintengine.cpp  simplehintengine.h
